--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,74 @@
+annotated-types==0.6.0
+autocommand==2.2.2
+backports.csv==1.0.7
+beautifulsoup4==4.12.2
+blinker==1.7.0
+blis==0.7.11
+catalogue==2.0.10
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+cheroot==10.0.0
+CherryPy==18.9.0
+click==8.1.7
+cloudpathlib==0.16.0
+colorama==0.4.6
+confection==0.1.4
+ConfigArgParse==1.7
+cryptography==41.0.7
+cymem==2.0.8
+de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.7.0/de_core_news_sm-3.7.0-py3-none-any.whl
+feedparser==6.0.11
 Flask==3.0.0
+future==0.18.3
+idna==3.6
+inexactsearch==1.0.2
+inflect==7.0.0
+itsdangerous==2.1.2
+jaraco.collections==5.0.0
+jaraco.context==4.3.0
+jaraco.functools==4.0.0
+jaraco.text==3.12.0
+Jinja2==3.1.2
+joblib==1.3.2
+langcodes==3.3.0
 language-tool-python==2.7.1
+lxml==4.9.3
+MarkupSafe==2.1.3
+more-itertools==10.1.0
+murmurhash==1.0.10
+mysqlclient==2.2.1
+nltk==3.8.1
+numpy==1.26.2
+packaging==23.2
+pdfminer.six==20221105
+portend==3.2.0
+preshed==3.0.9
+pycparser==2.21
+pydantic==2.5.2
+pydantic_core==2.14.5
+pyLanguagetool==0.10.0
+python-docx==1.1.0
+pytz==2023.3.post1
+regex==2023.10.3
+requests==2.31.0
+scipy==1.11.4
+sgmllib3k==1.0.0
+silpa-common==0.3
+smart-open==6.4.0
+soundex==1.1.3
+soupsieve==2.5
 spacy==3.7.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+tempora==5.5.0
+thinc==8.2.2
+tqdm==4.66.1
+typer==0.9.0
+typing_extensions==4.9.0
+urllib3==2.1.0
+wasabi==1.1.2
+weasel==0.3.4
+Werkzeug==3.0.1
+zc.lockfile==3.0.post1
